Fixed some more fullscreen z-index issues.

--- a/app/src/Components/Body/Styles/Navigation/Navigation.module.css
+++ b/app/src/Components/Body/Styles/Navigation/Navigation.module.css
@@ -37,7 +37,6 @@
     cursor: pointer;
     text-align: center;
 
-    z-index: 2;
     position: absolute;
     top: 0;
     left: 0;
