--- a/app/src/Components/Body/Styles/Notes/Notes.module.css
+++ b/app/src/Components/Body/Styles/Notes/Notes.module.css
@@ -106,7 +106,6 @@
     cursor: pointer;
     text-align: center;
 
-    z-index: 2;
     position: absolute;
     top: 0;
     right: 0;
